--- a/GPUTracker/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/GPUTracker/Resources/Base.lproj/LaunchScreen.storyboard
@@ -30,8 +30,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launchScreenMarketing" translatesAutoresizingMaskIntoConstraints="NO" id="x8K-j4-Xif">
-                                <rect key="frame" x="144" y="527" width="330" height="209"/>
+                                <rect key="frame" x="173" y="530" width="301" height="206"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="r" translatesAutoresizingMaskIntoConstraints="NO" id="OfI-dZ-u26">
                                 <rect key="frame" x="221" y="343" width="50" height="50"/>
