--- a/GPUTracker/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/GPUTracker/Resources/Base.lproj/LaunchScreen.storyboard
@@ -17,13 +17,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launchScreenLogo" translatesAutoresizingMaskIntoConstraints="NO" id="o7S-VW-WbI">
-                                <rect key="frame" x="130" y="319" width="154" height="99"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GTracker" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="85d-Ps-xJQ">
+                                <rect key="frame" x="127" y="399" width="160" height="52"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1024-1024" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o7S-VW-WbI">
+                                <rect key="frame" x="-305" y="299" width="1024" height="104"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="85d-Ps-xJQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="127" id="2Bd-kR-Ty0"/>
+                            <constraint firstItem="o7S-VW-WbI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="299" id="3cD-Yb-UoV"/>
+                            <constraint firstItem="o7S-VW-WbI" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="VnC-O1-exd"/>
+                            <constraint firstItem="85d-Ps-xJQ" firstAttribute="centerX" secondItem="o7S-VW-WbI" secondAttribute="centerX" id="XVr-KE-MMI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="o7S-VW-WbI" secondAttribute="bottom" constant="333" id="nPB-kX-khw"/>
+                            <constraint firstItem="85d-Ps-xJQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="399" id="x6O-bb-bIW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="85d-Ps-xJQ" secondAttribute="bottom" constant="285" id="y5m-gd-Ntv"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -32,7 +46,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launchScreenLogo" width="1280" height="1024"/>
+        <image name="1024-1024" width="1024" height="1024"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
