--- a/GPUTracker/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/GPUTracker/Resources/Base.lproj/LaunchScreen.storyboard
@@ -17,29 +17,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LauncScreenLogo" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o7S-VW-WbI">
-                                <rect key="frame" x="157" y="318" width="100" height="100"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenLogo" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="o7S-VW-WbI">
+                                <rect key="frame" x="147" y="308" width="120" height="120"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="Pti-aJ-rha"/>
-                                    <constraint firstAttribute="height" constant="100" id="ghU-TY-eVi"/>
+                                    <constraint firstAttribute="height" constant="120" id="Hcf-6k-Qvl"/>
+                                    <constraint firstAttribute="width" constant="120" id="kv0-8l-56e"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GPUTracker" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="85d-Ps-xJQ">
-                                <rect key="frame" x="127" y="415" width="160" height="50"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="26"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="85d-Ps-xJQ" secondAttribute="bottom" constant="271" id="D7g-FM-BeA"/>
-                            <constraint firstItem="o7S-VW-WbI" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="H4d-vs-L4R"/>
-                            <constraint firstItem="o7S-VW-WbI" firstAttribute="centerX" secondItem="85d-Ps-xJQ" secondAttribute="centerX" id="PCV-jc-mMI"/>
-                            <constraint firstItem="85d-Ps-xJQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="415" id="X5a-n3-SmF"/>
-                            <constraint firstItem="85d-Ps-xJQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="127" id="fbh-Id-EtQ"/>
-                            <constraint firstItem="o7S-VW-WbI" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="wnY-xo-U6P"/>
+                            <constraint firstItem="o7S-VW-WbI" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Dnc-te-oMi"/>
+                            <constraint firstItem="o7S-VW-WbI" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="PWc-sR-yh7"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -49,7 +39,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LauncScreenLogo" width="512" height="512"/>
+        <image name="LaunchScreenLogo" width="1024" height="1024"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
